src/harf-src/src/stylesheets/sample-section.scss
p {
    margin: 0.8vw;
}

.button {
    background-color: transparent;
    border-color: transparent;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: end;
    cursor: pointer;
}

#sample-section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
}

.sample-title-space {
    height: #{'min(8vw, 75px)'};
}

.sample-row {
    display: flex;
    justify-content: end;
    align-items: center;
    flex-direction: row;
}

#buttons {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-direction: column;
}

.white-title-sample {
    white-space: nowrap;
    color: white;
    margin-right: 2vw;
    transition: 1s ease-in-out;
    font-weight: 400;
    background-color: transparent;
    z-index: 1;
    font-size: 1.3vw;
    font-family: iran-yekan, serif;
}

.description-sample {
    color: white;
    direction: rtl;
    z-index: 1;
    transition: 1s ease-in-out;
    background-color: transparent;
    font-family: iran-yekan, serif;
    font-size: 1.1vw;
}

.dot {
    width: 0.7vw;
}

.no-dot {
    display: none;
}

.polygon {
    margin-right: -0.35vw;
    width: 1.5vw;
}

.image-sample {
    width: 35vw;
    z-index: 10;
    height: 40vh;
}

#sample-title {
    color: #26ff7b;
    font-style: normal;
    font-weight: bold;
    font-size: 1.8vw;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: iran-yekan, serif;
}

.mobile-image {
    display: none;
    height: 40vh;
    margin-bottom: 5vh;
}

#orange-border {
    position: absolute;
    margin-bottom: 24vw;
}

#orange-border-main {
    width: 5vw;
}

.sample-image {
    position: absolute;
    width: 35vw;
    height: 40vh;
}

.sample-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-image: url(../assets/images/samples/Pattern.svg);
    background-color: white;
    width: 43vw;
    background-repeat: no-repeat;
    background-size: cover;
    height: 30vw;
    border-radius: 20px;
}

#harf-text-container {
    width: 35vw;
    font-size: 1.2vw;
    text-align: center;
    height: 20vw;
    text-align: center;
    display: table;
    color: black;
    font-family: iran-yekan, serif;
}

#active-orange-title {
    background-color: #26ff7b;
    color: black;
    font-weight: 700;
}

#active-orange-description {
    color: #26ff7b;
}

@media screen and (max-width: 500px) {
    #sample-title {
        font-size: 5.3vw;
        z-index: 100;
    }

    .sample-title-space {
        height: 11vw;
    }

    .sample-alefbized {
        display: none;
    }

    #image-sample {
        display: none;
    }

    .dot {
        display: none;
    }

    .mobile-image {
        display: flex;
        width: 85vw;
    }

    #sample-section {
        flex-direction: column;
        justify-content: flex-end;
        align-items: flex-end;
        width: 80vw;
    }

    .white-title-sample {
        color: #26ff7b;
        font-size: 5.1vw;
        height: auto;
        width: auto;
        text-align: right;
    }

    #buttons {
        justify-content: center;
    }

    .sample {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-direction: column;
    }

    .description-sample {
        font-size: 4vw;
        margin-top: -2vh;
        height: 3.5211267605633805vh;
        width: 61.111111111111114vw;
    }

    .button {
        width: 80vw;
        margin-top: 25vh;
    }

    .float-right {
        margin-right: -10vw;
    }

    .float-left {
        margin-right: 4vw;
        margin-top: 2.5vh;
    }

    .text-left {
        text-align: left;
        margin-right: 15vw;
    }

    .text-left-title {
        text-align: left;
        margin-right: 35vw;
    }

    .polygon {
        display: none;
    }

    #orange-border {
        display: none;
    }

    .sample-container {
        display: flex;
        width: 85vw;
        justify-content: space-around;
        align-items: center;
        height: fit-content;
        margin: 0 7.5vw;
        border-radius: 20px;
    }

    #harf-text-container {
        width: 70vw;
        font-size: 3.3vw;
        margin-top: 10vw;
        height: 10vw;
    }

    .sample-row {
        flex-direction: row;
        justify-content: center;
        align-items: center;
        width: inherit;
        height: auto;
    }

    /*
  this section and the next one provides the horizontall scrolling in mobile
  */
    .button {
        width: fit-content;
        margin: 0 5vw;
    }

    #buttons {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-direction: row-reverse;
        overflow-x: auto;
        white-space: nowrap;
        width: 100vw;
        margin: 0;
        margin-top: 5vw;
        overflow-y: hidden;
    }

    .sample {
        margin-top: 9vw;
    }

    .white-title-sample,
    #active-orange-title {
        text-align: center;
        z-index: 10000;
    }

    #sample-section {
        width: 100vw;
    }

    #buttons::-webkit-scrollbar {
        width: 0px;
        height: 0px;
    }

    #sample {
        width: 100vw;
    }
}

